--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -30,7 +30,7 @@
 	font-weight: lighter;
 	opacity: 0.8;
 	margin-bottom: 20px;
-	font-family: 'Lora', serif;
+	font-family: 'Open Sans', sans-serif;
 }
 .banner-third{
 	background-image: linear-gradient(-225deg, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0.7) 50%),url("../../images/digital_background.jpeg");
