--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,19 @@
 @import url("components/banner.css");
 @import url("components/card.css");
 
-body {
+body{
 	font-family: 'Open Sans', sans-serif;
-	font-size: 16px;
+	font-size: 14.5px;
 	margin: 0px;
 }
-h1, h2, h3 {
+h1, h2, h3{
 	font-family: 'Noto Sans TC', sans-serif;
 	font-weight: bold;
 }
-a {
+h3{
+	font-size: 20px;
+}
+a{
 	text-decoration: none;
 	font-family: 'Open Sans', sans-serif;
 }
