--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -3,6 +3,7 @@
 	color: white;
 	padding: 150px 0px;
 	background-size: cover;
+	background-attachment: fixed;
 	background-position: center;
 }
 .banner h1{
